<resources>
    <string name="app_name">DrinkBrowserApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_of_the_drink">Image of the drink</string>
    <string name="carousel_item_image">Image of carousel list item</string>
    <string name="drink_detail_drink_name">Name:</string>
    <string name="drink_detail_alcohol_content">Alcohol Content:</string>
    <string name="drink_detail_category">Category:</string>
    <string name="drink_detail_glass_type">Glass Type:</string>
    <string name="drink_detail_instruction">Instruction:</string>
    <string name="drink_detail_ingredients">Ingredients:</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_search">Search</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_search_item">Search</string>
    <string name="menu_search_filters">Filters</string>
    <string name="no_results_found">No results found</string>
    <string name="drink_detail_floating_action_button">Button adding or removing drinks to favorites</string>
    <string name="catalog_toolbar_title">Catalog</string>
    <string name="favourites_toolbar_title">Favourites</string>
</resources>